--- a/calendarios.html
+++ b/calendarios.html
@@ -86,6 +86,18 @@
       </ul>
     </nav>
   </header>
+  <section class="submenu">
+    <h3>Selecione o Torneio que pretende ver:</h3>
+    <ul>
+      <li><a href="c_masculino.html">Torneio Masculino - para testes</a></li>
+      <!--<li><a href="calendarios/feminino.html">Torneio Feminino</a></li>
+      <li><a href="calendarios/mistos.html">Torneio Mistos</a></li>
+      <li><a href="calendarios/sub16.html">Torneio Sub-16</a></li>
+        <li><a href="/calendarios/taca-masc.html">Taça Maribar Masculina</a></li>
+      <li><a href="/calendarios/taca-fem.html">Taça Maribar Feminina</a></li>
+      <li><a href="/calendarios/taca-mix.html">Taça Maribar Mista</a></li>-->
+    </ul>
+  </section>
 
 
   <h1>Jogos (Todos os Campos)</h1>
