--- a/c_masculino.html
+++ b/c_masculino.html
@@ -75,6 +75,9 @@
 
 
       <h3>Quadro Competitivo</h3>
+      <p style="color: #444; font-weight: bold; margin-top: 10px;">
+        ℹ️ Para uma melhor visualização, rode o telemóvel para modo horizontal.
+      </p>
       <button onclick="mostrarFase('fase1')">1.ª Fase</button>
       <button onclick="mostrarFase('fase2')">2.ª Fase</button>
 
