--- a/calendarios.html
+++ b/calendarios.html
@@ -86,7 +86,10 @@
       </ul>
     </nav>
   </header>
+
+  
   <section class="submenu">
+    <h1>Calendários e Resultados</h1>
     <h3>Selecione o Torneio que pretende ver:</h3>
     <ul>
       <li><a href="c_masculino.html">Torneio Masculino - para testes</a></li>
@@ -100,7 +103,7 @@
   </section>
 
 
-  <h1>Jogos (Todos os Campos)</h1>
+  <h3>Ou procure aqui pela sua dupla</h3>
   <p style="color: #444; font-weight: bold; margin-top: 10px;">
     ℹ️ Para uma melhor visualização, rode o telemóvel para modo horizontal.
   </p>
