--- a/c_masculino.html
+++ b/c_masculino.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Edições Passadas - Torneio Maribar</title>
+  <title>Torneio Masculino - Torneio Maribar</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
