--- a/edicoes-passadas.html
+++ b/edicoes-passadas.html
@@ -2,8 +2,6 @@
 <html lang="pt">
 
 <head>
-  <link rel="icon" type="image/jpeg" href="logo.JPG">
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Edições Passadas - Torneio Maribar</title>
@@ -17,7 +15,10 @@
         <img src="logo.JPG" alt="Logótipo" width="32" height="32" style="border-radius: 50%;">
         Torneio Maribar
       </h1>
-      <ul>
+
+      <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
+      <ul id="nav-menu">
         <li><a href="index.html">Início</a></li>
         <li><a href="sobre-nos.html">Sobre Nós</a></li>
         <li><a href="edicoes-passadas.html">Edições Passadas</a></li>
@@ -66,11 +67,17 @@
       <p>Reel publicado no Facebook com momentos da edição de 2019:</p>
       <a href="https://www.facebook.com/reel/714430967154955" target="_blank">
         <img src="torneio2019.jpg" alt="Reel 2019 no Facebook"
-          style="width: 100%; max-width: 700px; border-radius: 8px; margin-bottom: 2rem;">
+             style="width: 100%; max-width: 700px; border-radius: 8px; margin-bottom: 2rem;">
       </a>
     </section>
   </main>
-
+  <script>
+    function toggleMenu() {
+      const menu = document.getElementById("nav-menu");
+      menu.classList.toggle("active");
+    }
+  </script>
+  </body>
   <footer>
     <p>&copy; Torneio de Voleibol de Praia no Maribar | Contacto: <a
         href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a></p>
@@ -86,6 +93,6 @@
       </a>
     </div>
   </footer>
-</body>
+
 
 </html>
