--- a/informacoes.html
+++ b/informacoes.html
@@ -17,7 +17,10 @@
         <img src="logo.JPG" alt="Logótipo" width="32" height="32" style="border-radius: 50%;">
         Torneio Maribar
       </h1>
-      <ul>
+
+      <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
+      <ul id="nav-menu">
         <li><a href="index.html">Início</a></li>
         <li><a href="sobre-nos.html">Sobre Nós</a></li>
         <li><a href="edicoes-passadas.html">Edições Passadas</a></li>
@@ -67,7 +70,14 @@
       <p><strong>Brevemente disponíveis!</strong> Fica atento.</p>
     </section>
   </main>
-
+  <script>
+    function toggleMenu() {
+      const menu = document.getElementById("nav-menu");
+      menu.classList.toggle("active");
+    }
+  </script>
+  </body>
+  
   <footer>
     <p>&copy; Torneio de Voleibol de Praia no Maribar | Contacto: <a
         href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a></p>
@@ -83,6 +93,6 @@
       </a>
     </div>
   </footer>
-</body>
+
 
 </html>
