--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -17,7 +17,10 @@
         <img src="logo.JPG" alt="Logótipo" width="32" height="32" style="border-radius: 50%;">
         Torneio Maribar
       </h1>
-      <ul>
+
+      <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
+      <ul id="nav-menu">
         <li><a href="index.html">Início</a></li>
         <li><a href="sobre-nos.html">Sobre Nós</a></li>
         <li><a href="edicoes-passadas.html">Edições Passadas</a></li>
@@ -45,7 +48,13 @@
       <div class="elfsight-app-59d00429-5777-4e44-b6b6-ac464b551d78" data-elfsight-app-lazy></div>
     </section>
   </main>
-
+  <script>
+    function toggleMenu() {
+      const menu = document.getElementById("nav-menu");
+      menu.classList.toggle("active");
+    }
+  </script>
+  </body>
   <footer>
     <p>&copy; Torneio de Voleibol de Praia no Maribar | Contacto: <a
         href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a></p>
@@ -61,6 +70,6 @@
       </a>
     </div>
   </footer>
-</body>
+
 
 </html>
