--- a/c_masculino.html
+++ b/c_masculino.html
@@ -11,21 +11,26 @@
 </head>
 
 
-<header>
-  <nav>
-    <h1 style="display: flex; align-items: center; gap: 10px;">
-      <img src="logo.JPG" alt="Logótipo" width="32" height="32" style="border-radius: 50%;">
-      Torneio Maribar
-    </h1>
-    <ul>
-      <li><a href="index.html">Início</a></li>
-      <li><a href="sobre-nos.html">Sobre Nós</a></li>
-      <li><a href="edicoes-passadas.html">Edições Passadas</a></li>
-      <li><a href="informacoes.html">Informações & Inscrições</a></li>
-      <li><a href="calendarios.html">Calendários & Resultados</a></li>
-    </ul>
-  </nav>
-</header>
+  <header>
+    <nav>
+      <h1 style="display: flex; align-items: center; gap: 10px;">
+        <img src="logo.JPG" alt="Logótipo" width="32" height="32" style="border-radius: 50%;">
+        Torneio Maribar
+      </h1>
+
+      <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
+      <ul id="nav-menu">
+        <li><a href="index.html">Início</a></li>
+        <li><a href="sobre-nos.html">Sobre Nós</a></li>
+        <li><a href="edicoes-passadas.html">Edições Passadas</a></li>
+        <li><a href="informacoes.html">Informações & Inscrições</a></li>
+        <li><a href="calendarios.html">Calendários & Resultados</a></li>
+        <li><a href="galeria.html">Galeria de Fotos</a></li>
+      </ul>
+    </nav>
+  </header>
+
 
 <body>
   <main>
