--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
         <li><a href="edicoes-passadas.html">Edições Passadas</a></li>
         <li><a href="informacoes.html">Informações & Inscrições</a></li>
         <li><a href="calendarios.html">Calendários & Resultados</a></li>
+        <li><a href="galeria.html">Galeria de Fotos</a></li>
       </ul>
     </nav>
   </header>
+
 
   <main>
     <section class="hero">
