--- a/calendarios.html
+++ b/calendarios.html
@@ -25,9 +25,11 @@
         <li><a href="edicoes-passadas.html">Edições Passadas</a></li>
         <li><a href="informacoes.html">Informações & Inscrições</a></li>
         <li><a href="calendarios.html">Calendários & Resultados</a></li>
+        <li><a href="galeria.html">Galeria de Fotos</a></li>
       </ul>
     </nav>
   </header>
+
 
   <section class="submenu">
     <h1>Calendários e Resultados</h1>
