--- a/edicoes-passadas.html
+++ b/edicoes-passadas.html
@@ -24,9 +24,12 @@
         <li><a href="edicoes-passadas.html">Edições Passadas</a></li>
         <li><a href="informacoes.html">Informações & Inscrições</a></li>
         <li><a href="calendarios.html">Calendários & Resultados</a></li>
+        <li><a href="galeria.html">Galeria de Fotos</a></li>
       </ul>
     </nav>
   </header>
+
+
 
   <main>
     <section class="conteudo">
