--- a/galeria.html
+++ b/galeria.html
@@ -40,6 +40,7 @@
         <li><a href="informacoes.html">Informações & Inscrições</a></li>
         <li><a href="calendarios.html">Calendários & Resultados</a></li>
         <li><a href="galeria.html">Galeria de Fotos</a></li>
+        <li><a href="regulamento.html">Regulamento</a></li>
       </ul>
     </nav>
   </header>
