--- a/informacoes.html
+++ b/informacoes.html
@@ -17,9 +17,7 @@
         <img src="logo.JPG" alt="Logótipo" width="32" height="32" style="border-radius: 50%;">
         Torneio Maribar
       </h1>
-
       <button class="menu-toggle" onclick="toggleMenu()">☰</button>
-
       <ul id="nav-menu">
         <li><a href="index.html">Início</a></li>
         <li><a href="sobre-nos.html">Sobre Nós</a></li>
@@ -27,6 +25,7 @@
         <li><a href="informacoes.html">Informações & Inscrições</a></li>
         <li><a href="calendarios.html">Calendários & Resultados</a></li>
         <li><a href="galeria.html">Galeria de Fotos</a></li>
+        <li><a href="regulamento.html">Regulamento</a></li>
       </ul>
     </nav>
   </header>
@@ -36,7 +35,10 @@
     <section class="conteudo">
       <h2>Informações do Torneio</h2>
 
-      <p><strong>Torneio de Duplas</strong> femininas, masculinas, mistas e sub-16 (fem/masc)</p>
+      <p>
+        <strong>Torneio de Duplas</strong> femininas, masculinas, mistas e sub-16 (feminino e masculino)<br>
+        <small><em>Sub-16: para atletas nascidos em 2010 ou depois</em></small>
+      </p>
       <p><strong>📍 Local:</strong> Maribar<br>
         <strong>📅 Datas:</strong> 2 e 3 de agosto<br>
         <strong>🕘 Início:</strong> 9h00
