--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
         <img src="logo.JPG" alt="Logótipo" width="32" height="32" style="border-radius: 50%;">
         Torneio Maribar
       </h1>
-
       <button class="menu-toggle" onclick="toggleMenu()">☰</button>
-
       <ul id="nav-menu">
         <li><a href="index.html">Início</a></li>
         <li><a href="sobre-nos.html">Sobre Nós</a></li>
@@ -27,6 +25,7 @@
         <li><a href="informacoes.html">Informações & Inscrições</a></li>
         <li><a href="calendarios.html">Calendários & Resultados</a></li>
         <li><a href="galeria.html">Galeria de Fotos</a></li>
+        <li><a href="regulamento.html">Regulamento</a></li>
       </ul>
     </nav>
   </header>
