--- a/edicoes-passadas.html
+++ b/edicoes-passadas.html
@@ -64,12 +64,13 @@
       </div>
 
       <!-- 2019 -->
-      <h3>🎞️ Torneio 2019</h3>
-      <p>Reel publicado no Facebook com momentos da edição de 2019:</p>
-      <a href="https://www.facebook.com/reel/714430967154955" target="_blank">
-        <img src="torneio2019.jpg" alt="Reel 2019 no Facebook"
-             style="width: 100%; max-width: 700px; border-radius: 8px; margin-bottom: 2rem;">
-      </a>
+      <h3>🎥 Torneio 2029</h3>
+      <p>Vídeo recap da edição de 2029:</p>
+      <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;margin-bottom:2rem;">
+        <iframe src="https://www.youtube.com/embed/iKbM3Mav-ZI" frameborder="0" allowfullscreen
+          style="position:absolute;top:0;left:0;width:100%;height:100%;">
+        </iframe>
+      </div>
     </section>
   </main>
   <script>
@@ -78,22 +79,22 @@
       menu.classList.toggle("active");
     }
   </script>
-  </body>
-  <footer>
-    <p>&copy; Torneio de Voleibol de Praia no Maribar | Contacto: <a
-        href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a></p>
-    <div class="social-icons">
-      <a href="https://www.facebook.com/profile.php?id=100093335237350" target="_blank" aria-label="Facebook">
-        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" width="24"
-          height="24">
-      </a>
-      <a href="https://www.instagram.com/torneiomaribarvolley?igsh=NncxcXVhNWp2OTh6" target="_blank"
-        aria-label="Instagram">
-        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" width="24"
-          height="24">
-      </a>
-    </div>
-  </footer>
+</body>
+<footer>
+  <p>&copy; Torneio de Voleibol de Praia no Maribar | Contacto: <a
+      href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a></p>
+  <div class="social-icons">
+    <a href="https://www.facebook.com/profile.php?id=100093335237350" target="_blank" aria-label="Facebook">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" width="24"
+        height="24">
+    </a>
+    <a href="https://www.instagram.com/torneiomaribarvolley?igsh=NncxcXVhNWp2OTh6" target="_blank"
+      aria-label="Instagram">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" width="24"
+        height="24">
+    </a>
+  </div>
+</footer>
 
 
 </html>
