--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -34,12 +34,19 @@
   <main>
     <section class="conteudo">
       <h2>Sobre Nós</h2>
+
       <p>O Torneio de Voleibol nasceu da paixão de um grupo de amigos pelo desporto e pelo convívio saudável. Todos os
         anos, reunimos atletas de várias idades e níveis para celebrar o espírito competitivo, a amizade e o fair-play.
       </p>
 
       <p>O nosso objetivo é promover o voleibol como um desporto acessível a todos, criando uma comunidade de
         participantes, voluntários e apoiantes.</p>
+
+      <p><strong>🙏 Agradecemos aos nossos parceiros e amigos</strong>, sem os quais este torneio não seria possível.
+        </p>
+      <p>
+        <a href="parceiros.html" style="color: #004080; font-weight: bold;">Conhece os nossos parceiros </a>
+      </p>
     </section>
     </section>
     <section class="instagram-feed">
@@ -55,22 +62,22 @@
       menu.classList.toggle("active");
     }
   </script>
-  </body>
-  <footer>
-    <p>&copy; Torneio de Voleibol de Praia no Maribar | Contacto: <a
-        href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a></p>
-    <div class="social-icons">
-      <a href="https://www.facebook.com/profile.php?id=100093335237350" target="_blank" aria-label="Facebook">
-        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" width="24"
-          height="24">
-      </a>
-      <a href="https://www.instagram.com/torneiomaribarvolley?igsh=NncxcXVhNWp2OTh6" target="_blank"
-        aria-label="Instagram">
-        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" width="24"
-          height="24">
-      </a>
-    </div>
-  </footer>
+</body>
+<footer>
+  <p>&copy; Torneio de Voleibol de Praia no Maribar | Contacto: <a
+      href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a></p>
+  <div class="social-icons">
+    <a href="https://www.facebook.com/profile.php?id=100093335237350" target="_blank" aria-label="Facebook">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" width="24"
+        height="24">
+    </a>
+    <a href="https://www.instagram.com/torneiomaribarvolley?igsh=NncxcXVhNWp2OTh6" target="_blank"
+      aria-label="Instagram">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" width="24"
+        height="24">
+    </a>
+  </div>
+</footer>
 
 
 </html>
