--- a/calendarios.html
+++ b/calendarios.html
@@ -271,8 +271,11 @@
   </div>
 </body>
 <footer>
-  <p>&copy; Torneio de Voleibol de Praia no Maribar | Contacto: <a
-      href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a></p>
+  <p>
+    &copy; Torneio de Voleibol de Praia no Maribar |
+    <a href="apresentacao.html">📊 Apresentação</a> |
+    Contacto: <a href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a>
+  </p>
   <div class="social-icons">
     <a href="https://www.facebook.com/profile.php?id=100093335237350" target="_blank" aria-label="Facebook">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" width="24"
