--- a/apresentacao.html
+++ b/apresentacao.html
@@ -1,67 +1,160 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
+
 <head>
   <meta charset="UTF-8">
-  <title>Apresentação ao Vivo</title>
+  <title>Carrossel Google Sheets</title>
   <style>
-    html, body {
+    html,
+    body {
       margin: 0;
       padding: 0;
       height: 100%;
+      width: 100%;
+      font-family: Arial, sans-serif;
       background-color: #000;
     }
 
-    img {
+    .carousel-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
       width: 100%;
-      height: 100vh;
-      object-fit: contain;
+    }
+
+    .carousel {
+      flex-grow: 1;
+      width: 100%;
+      height: 100%;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .slide {
+      display: none;
+      width: 100%;
+      height: 100%;
+    }
+
+    .slide.active {
       display: block;
     }
 
-    .fullscreen-btn {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      z-index: 999;
-      background-color: #004080;
-      color: white;
+    iframe {
+      width: 100%;
+      height: 100%;
       border: none;
-      padding: 10px 15px;
-      font-size: 14px;
-      border-radius: 6px;
+    }
+
+    .buttons {
+      display: flex;
+      gap: 10px;
+      padding: 10px;
+      background: #111;
+    }
+
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      color: white;
+      background-color: #333;
+      border: none;
       cursor: pointer;
+      border-radius: 5px;
+    }
+
+    button:hover {
+      background-color: #555;
     }
   </style>
 </head>
+
 <body>
-   
-  <button class="fullscreen-btn" onclick="toggleFullscreen()">🔲 Fullscreen</button>
-  <img id="slide" src="img/quadro1.png" alt="Apresentação">
+
+  <div class="carousel-container" id="carouselContainer">
+    <div class="carousel" id="carousel">
+
+      <!-- Grupos Masculino -->
+      <div class="slide active">
+        <iframe
+          src="https://docs.google.com/spreadsheets/d/1tCgya4djEggY5RZ5_5tF2sJP-OA-NfAIBRmh5m85Z_0/edit?gid=2067354137#gid=2067354137"></iframe>
+      </div>
+
+      <!-- 2ª Fase Masculino -->
+      <div class="slide">
+        <iframe
+          src="https://docs.google.com/spreadsheets/d/1tCgya4djEggY5RZ5_5tF2sJP-OA-NfAIBRmh5m85Z_0/edit?gid=1992541591#gid=1992541591"></iframe>
+      </div>
+
+      <!-- Grupos Feminino -->
+      <div class="slide">
+        <iframe
+          src="https://docs.google.com/spreadsheets/d/1tCgya4djEggY5RZ5_5tF2sJP-OA-NfAIBRmh5m85Z_0/edit?gid=381487257#gid=381487257"></iframe>
+      </div>
+
+      <!-- 2ª Fase Feminino -->
+      <div class="slide">
+        <iframe
+          src="https://docs.google.com/spreadsheets/d/1tCgya4djEggY5RZ5_5tF2sJP-OA-NfAIBRmh5m85Z_0/edit?gid=108382013#gid=108382013"></iframe>
+      </div>
+
+      <!-- Grupos Mistos -->
+      <div class="slide">
+        <iframe
+          src="https://docs.google.com/spreadsheets/d/1tCgya4djEggY5RZ5_5tF2sJP-OA-NfAIBRmh5m85Z_0/edit?gid=1057529267#gid=1057529267"></iframe>
+      </div>
+
+      <!-- 2ª Fase Mistos -->
+      <div class="slide">
+        <iframe
+          src="https://docs.google.com/spreadsheets/d/1tCgya4djEggY5RZ5_5tF2sJP-OA-NfAIBRmh5m85Z_0/edit?gid=109933911#gid=109933911"></iframe>
+      </div>
+
+    </div>
+
+
+    <div class="buttons">
+      <button onclick="prev()">◀ Anterior</button>
+      <button onclick="next()">Seguinte ▶</button>
+      <button onclick="toggleFullscreen()">🖵 Ecrã Inteiro</button>
+    </div>
+  </div>
 
   <script>
-    const imagens = [
-      "img/quadro1.png",
-      "img/quadro2.png",
-      "img/quadro3.png"
-    ];
-
     let index = 0;
-    const imgEl = document.getElementById("slide");
+    const slides = document.querySelectorAll('.slide');
 
-    function atualizarImagem() {
-      index = (index + 1) % imagens.length;
-      imgEl.src = imagens[index] + '?t=' + new Date().getTime(); // força refresh do cache
+    function showSlide(n) {
+      slides.forEach((slide, i) => {
+        slide.classList.toggle('active', i === n);
+      });
     }
 
-    setInterval(atualizarImagem, 30000); // troca a cada 30 segundos
+    function next() {
+      index = (index + 1) % slides.length;
+      showSlide(index);
+    }
+
+    function prev() {
+      index = (index - 1 + slides.length) % slides.length;
+      showSlide(index);
+    }
 
     function toggleFullscreen() {
+      const elem = document.getElementById("carouselContainer");
       if (!document.fullscreenElement) {
-        document.documentElement.requestFullscreen();
+        elem.requestFullscreen().catch(err => alert(`Erro ao ativar ecrã inteiro: ${err.message}`));
       } else {
         document.exitFullscreen();
       }
     }
+
+    // ⏱️ Troca automática de slide a cada 10 segundos
+    setInterval(next, 30000);
   </script>
+
 </body>
+
 </html>
