--- a/regulamento.html
+++ b/regulamento.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Regulamento - Torneio Maribar</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header>
     <nav>
@@ -46,8 +48,8 @@
       <li>Enviar a bola em toque de dedos diretamente para o campo adversário é falta.</li>
       <li><strong>Mistos:</strong>
         <ul>
-          <li>A mulher pode dar o 1.º toque em toque de dedos, desde que não envie para o campo adversário.</li>
-          <li>É permitido jogar com dois atletas do mesmo género desde que um seja menor de 14 anos e parentes diretos.</li>
+          <li>É permitido jogar com dois atletas do mesmo género desde que um seja menor de 14 anos (nascidos em 2012 ou
+            depois) e parentes diretos.</li>
         </ul>
       </li>
       <li><strong>Sub-16:</strong>
@@ -67,8 +69,15 @@
     <h4>Quadro Competitivo</h4>
     <p>O quadro pode ser ajustado conforme o número de duplas:</p>
     <ul>
-      <li><strong>1.ª Fase:</strong> Grupos de 4 ou 5 equipas. Apuram 3 primeiras; restantes vão para a Taça Maribar. Jogos a 1 set até 21 pontos.</li>
-      <li><strong>2.ª Fase:</strong> Eliminatória simples. Derrotados antes dos oitavos (jogos de sábado) vão para a Taça Maribar. Jogos a melhor de 3 sets até 15 pontos.</li>
+      <li><strong>1.ª Fase:</strong> </li>
+      <li>Jogos a 1 set até 21 pontos.</li>
+      <li>Grupos de 4 ou 5 equipas..</li>
+      <li>Apuram 3 primeiras; restantes vão para a Taça Maribar.</li>
+      <p></p>
+      <li><strong>2.ª Fase:</strong>
+      <li>Jogos a melhor de 3 sets até 15 pontos.</li>
+      <li>Eliminatória simples.</li>
+      <li>Derrotados antes dos oitavos (jogos de sábado) vão para a Taça Maribar. </li>
     </ul>
 
     <h4>Prémios</h4>
@@ -95,15 +104,27 @@
       <li>1.º Lugar: Brinde surpresa</li>
       <li>2.º Lugar: Brinde surpresa</li>
     </ul>
+    <h4>Inscrições</h4>
+    <p>O torneio tem um número limitado de vagas por tipo de escalão:</p>
+    <ul>
+      <li>Máximo de <strong>64 duplas</strong> no <strong>Masculino</strong></li>
+      <li>Máximo de <strong>64 duplas</strong> no <strong>Misto</strong></li>
+      <li>Máximo de <strong>32 duplas</strong> no <strong>Feminino</strong></li>
+      <li>Máximo de <strong>32 duplas</strong> no <strong>Sub-16</strong></li>
+    </ul>
+    <p>As inscrições encerram automaticamente ao atingir o limite de vagas.</p>
+
   </main>
 
   <footer>
-    <p>&copy; Torneio de Voleibol de Praia no Maribar | Contacto: <a href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a></p>
+    <p>&copy; Torneio de Voleibol de Praia no Maribar | Contacto: <a
+        href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a></p>
     <div class="social-icons">
       <a href="https://www.facebook.com/profile.php?id=100093335237350" target="_blank" aria-label="Facebook">
         <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" width="24">
       </a>
-      <a href="https://www.instagram.com/torneiomaribarvolley?igsh=NncxcXVhNWp2OTh6" target="_blank" aria-label="Instagram">
+      <a href="https://www.instagram.com/torneiomaribarvolley?igsh=NncxcXVhNWp2OTh6" target="_blank"
+        aria-label="Instagram">
         <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" width="24">
       </a>
     </div>
@@ -116,4 +137,5 @@
     }
   </script>
 </body>
+
 </html>
