--- a/regulamento.html
+++ b/regulamento.html
@@ -49,7 +49,7 @@
       <li><strong>Mistos:</strong>
         <ul>
           <li>É permitido jogar com dois atletas do mesmo género desde que um seja menor de 14 anos (nascidos em 2012 ou
-            depois) e parentes diretos.</li>
+            depois) e parentes.</li>
         </ul>
       </li>
       <li><strong>Sub-16:</strong>
