--- a/calendarios1.html
+++ b/calendarios1.html
@@ -32,11 +32,6 @@
       </nav>
     </header>
 
-    <div style="text-align:center; padding: 100px 20px; font-family: sans-serif;">
-      <h1 style="color: #004080;">📢 Informações brevemente disponíveis</h1>
-      <p>O calendário e resultados do torneio estarão disponíveis em breve. Fica atento!</p>
-    </div>
-    <!--
     <section class="submenu">
       <h1>Calendários e Resultados</h1>
       <h3>Selecione o Torneio que pretende ver:</h3>
@@ -268,14 +263,13 @@
         const menu = document.getElementById("nav-menu");
         menu.classList.toggle("active");
       }
-    </script>-->
+    </script>
   </div>
 </body>
 <footer>
   <p>
     &copy; Torneio de Voleibol de Praia no Maribar |
     <a href="apresentacao.html">📊 Apresentação</a> |
-    <a href="calendarios1.html">📊 Calendario</a> |
     Contacto: <a href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a>
   </p>
   <div class="social-icons">
