--- a/parceiros.html
+++ b/parceiros.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -42,6 +43,7 @@
     }
   </style>
 </head>
+
 <body>
   <header>
     <nav>
@@ -67,26 +69,46 @@
     <h2>Parceiros do Torneio</h2>
     <p class="parceiros-principal">Parceiro Principal</p>
     <div class="parceiros-grid">
-      <a href="https://www.instagram.com/maribartorreira?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+      <a href="https://www.instagram.com/maribartorreira?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+        target="_blank">
         <img src="p_maribar.png" alt="Maribar" style="max-width: 600px; width: 100%;">
       </a>
     </div>
 
-    <p class="parceiros-principal">Outros Parceiros</p>
+    <p class="parceiros-principal">Parceiros de Ouro</p>
     <div class="parceiros-grid">
-      <a href="https://www.instagram.com/avenida_praia?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+      <a href="https://www.instagram.com/avenida_praia?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+        target="_blank">
         <img src="p_avenida.png" alt="Restaurante Avenida da Praia">
       </a>
+      <a href="https://www.instagram.com/aasmvoleibol/" target="_blank">
+        <img src="p_aasm.png" alt="Associação Académica de S. Mamede">
+      </a>
+      <a href="https://www.instagram.com/fabridoce_doces.regionais/" target="_blank">
+        <img src="p_fabridoce.png" alt="Fabridoce">
+      </a>
+      <a href="https://www.instagram.com/f.fonseca_sa/" target="_blank">
+        <img src="p_ffonseca.png" alt="ffonseca">
+      </a>
+      <a href="https://www.instagram.com/hotel_moliceiro/" target="_blank">
+        <img src="p_hotelmoliceiro.png" alt="hotelmoliceiro">
+      </a>
+      <a href="https://www.instagram.com/tgvs_vougafrio/" target="_blank">
+        <img src="p_vougafrio.png" alt="vougafrio">
+      </a>
+
     </div>
   </main>
 
   <footer>
-    <p>&copy; Torneio de Voleibol de Praia no Maribar | Contacto: <a href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a></p>
+    <p>&copy; Torneio de Voleibol de Praia no Maribar | Contacto: <a
+        href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a></p>
     <div class="social-icons">
       <a href="https://www.facebook.com/profile.php?id=100093335237350" target="_blank" aria-label="Facebook">
         <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" width="24">
       </a>
-      <a href="https://www.instagram.com/torneiomaribarvolley?igsh=NncxcXVhNWp2OTh6" target="_blank" aria-label="Instagram">
+      <a href="https://www.instagram.com/torneiomaribarvolley?igsh=NncxcXVhNWp2OTh6" target="_blank"
+        aria-label="Instagram">
         <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" width="24">
       </a>
     </div>
@@ -99,4 +121,5 @@
     }
   </script>
 </body>
+
 </html>
