--- a/informacoes.html
+++ b/informacoes.html
@@ -71,7 +71,8 @@
       </p>
 
       <h3>📥 Inscrições</h3>
-      <p><strong>Brevemente disponíveis!</strong> Fica atento.</p>
+      <p><strong>Já estão abertas!</strong></p>
+      <p><a href="https://bit.ly/inscricoestorneiomaribar2025" target="_blank">📄 Clica aqui para te inscreveres</a></p>
     </section>
   </main>
   <script>
@@ -80,23 +81,23 @@
       menu.classList.toggle("active");
     }
   </script>
-  </body>
-  
-  <footer>
-    <p>&copy; Torneio de Voleibol de Praia no Maribar | Contacto: <a
-        href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a></p>
-    <div class="social-icons">
-      <a href="https://www.facebook.com/profile.php?id=100093335237350" target="_blank" aria-label="Facebook">
-        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" width="24"
-          height="24">
-      </a>
-      <a href="https://www.instagram.com/torneiomaribarvolley?igsh=NncxcXVhNWp2OTh6" target="_blank"
-        aria-label="Instagram">
-        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" width="24"
-          height="24">
-      </a>
-    </div>
-  </footer>
+</body>
+
+<footer>
+  <p>&copy; Torneio de Voleibol de Praia no Maribar | Contacto: <a
+      href="mailto:pedrofacarvalho@gmail.com">pedrofacarvalho@gmail.com</a></p>
+  <div class="social-icons">
+    <a href="https://www.facebook.com/profile.php?id=100093335237350" target="_blank" aria-label="Facebook">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" width="24"
+        height="24">
+    </a>
+    <a href="https://www.instagram.com/torneiomaribarvolley?igsh=NncxcXVhNWp2OTh6" target="_blank"
+      aria-label="Instagram">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" width="24"
+        height="24">
+    </a>
+  </div>
+</footer>
 
 
 </html>
